<?xml version="1.0"?>
<package format="2">
  <name>misc_utilties</name>
  <version>0.1.0</version>
  <description>The miscellaneous utilities package</description>

  <maintainer email="llorrain@ualberta.ca">Laura Petrich</maintainer>

  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>